name:          xmonadrc
version:       1.0
synopsis:      My XMonad setup
license:       GPL-2
license-file:  LICENSE
author:        Marc Jakobi <mrcjkb89@outlook.com>
maintainer:    Marc Jakobi <mrcjkb89@outlook.com>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:
    Defaults
    EventHandling
    Help
    KeyBindings
    Layout
    LogHook
    MouseBindings
    StartupHook
    WindowRules
    WindowState
  hs-source-dirs: lib
  ghc-options: -Wall -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmonad
    , xmonad-contrib
    , containers
    , X11
  default-language: Haskell2010

executable xmonadrc
  main-is: xmonad.hs
  ghc-options: -Wall -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmonad
    , xmonad-contrib
    , xmonadrc
  default-language: Haskell2010
